# k8s-policy-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO.md
docs/assets/: showcase.html
src/k8s_policy_agent/: __init__.py  agent.py  cli.py  gitops.py  models.py  policy_generator.py  policy_validator.py  traffic_analyzer.py
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_gitops.py  test_models.py  test_policy_generator.py  test_policy_validator.py  test_traffic_analyzer.py
